--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/dark_blue_gray700"
-    tools:context=".MainActivity">
+    tools:context=".BirdServiceActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
